--- a/buttons-Button_groups.html
+++ b/buttons-Button_groups.html
@@ -48,7 +48,8 @@
     </button>
     <!-- button groups -->
     <h2>Button Groups</h2>
-
+    <!-- https://getbootstrap.com/docs/5.1/components/button-group/ -->
+    <!-- Wrap a series of buttons with .btn in .btn-group. -->
     <div class="btn-group">
       <a href="#" class="btn btn-primary">button 1</a>
       <a href="#" class="btn btn-warning">button 2</a>
