--- a/dropdown.html
+++ b/dropdown.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="./style.css">
     <title>Learning Bootstrap Project</title>
 </head>
 
@@ -17,7 +17,7 @@
         <div class="container-xxl">
             <!-- navbar brand / title -->
             <a class="navbar-brand" href="#intro">
-                <span class="text-secondary fw-bold"> Net Ninja Pro - the Book </span>
+                <span class="text-secondary fw-bold"> the Book </span>
             </a>
             <!-- toggle button for mobile nav -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
@@ -61,7 +61,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Laboriosam, dignissimos?
                     </p>
-                    <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
+                    <a href="#pricing" class="btn btn-secondary btn-lg buy-button">Buy Now</a>
 
                     <!-- open sidebar / offcanvas -->
                     <a href="#sidebar" class="d-block mt-3" data-bs-toggle="offcanvas" role="button"
